# perroute

./: .env.docker  .env.example  .gitignore  Cargo.toml  Makefile.toml  README.md  docker-compose.yml  rustfmt.toml  typos.toml
crates/omni-backoffice-api/: Cargo.toml  Dockerfile
crates/omni-backoffice-api/src/: app.rs  database.rs  errors.rs  lib.rs  main.rs
crates/omni-backoffice-api/src/rest/: mod.rs
crates/omni-commons/: Cargo.toml
crates/omni-commons/src/: configuration.rs  lib.rs  tracing.rs
crates/omni-commons/src/configuration/: env.rs  mod.rs  settings.rs
crates/omni-commons/src/rest/: mod.rs
crates/omni-commons/src/types/: code.rs
crates/omni-connectors/: Cargo.toml
crates/omni-connectors/src/connector/: smtp.rs
crates/omni-storage/: Cargo.toml
crates/omni-storage/migrations/: 20230531130345_intial_schema.up.sql
crates/omni-storage/src/: connection.rs  connection_manager.rs  connection_pool.rs  lib.rs  utils.rs
crates/omni-storage/src/models/: channel.rs  connection.rs  mod.rs  user.rs
crates/omni-storage/tests/: chanel_it.rs  chanel_test.rs
crates/perroute-api/: Cargo.toml
crates/perroute-api/src/: app.rs  lib.rs  main.rs
crates/perroute-api/src/rest/: error.rs  mod.rs  models.rs  service.rs
crates/perroute-api/src/routes/: mod.rs
crates/perroute-api/src/services/: business_units.rs  mod.rs
crates/perroute-backoffice-actix/: Cargo.toml
crates/perroute-backoffice-actix/src/: api.rs  error.rs  lib.rs  main.rs
crates/perroute-backoffice-actix/src/api/: mod.rs  response.rs
crates/perroute-backoffice-actix/src/api_models/: channel.rs
crates/perroute-backoffice-actix/src/routes/: channel.rs  health.rs  message_type.rs  mod.rs  route.rs  schema.rs
crates/perroute-backoffice-api/: Cargo.toml  Dockerfile
crates/perroute-backoffice-api/src/: app.rs  error.rs  errors.rs  lib.rs  links.rs  main.rs  routes.rs  types.rs
crates/perroute-backoffice-api/src/api/: mod.rs  prelude.rs  response.rs
crates/perroute-backoffice-api/src/extractors/: actor.rs
crates/perroute-backoffice-api/src/rest/: error.rs  mod.rs
crates/perroute-backoffice-api/src/routes/: api_key.rs  business_unit.rs  channel.rs  connection.rs  health.rs  message.rs  message_type.rs  mod.rs  plugin.rs  prelude.rs  route.rs  schema.rs  template.rs  template_assignment.rs
crates/perroute-backoffice-api/tests/: channels_query_it.rs  health_it.rs
crates/perroute-backoffice-api/tests/common/: mod.rs
crates/perroute-command-bus/: Cargo.toml
crates/perroute-command-bus/src/: bus.rs  error.rs  lib.rs
crates/perroute-command-bus/src/commands/: mod.rs
crates/perroute-commons/: Cargo.toml
crates/perroute-commons/src/: commands.rs  crypto.rs  events.rs  lib.rs  new_events.rs  postgres.rs  prelude.rs  template.rs  tracing.rs
crates/perroute-commons/src/configuration/: env.rs  settings.rs
crates/perroute-commons/src/events/: mod.rs
crates/perroute-commons/src/rest/: mod.rs
crates/perroute-commons/src/template/: context.rs  handlebars.rs  mod.rs
crates/perroute-commons/src/types/: actor.rs  code.rs  command_type.rs  dispatch_type.rs  email.rs  entity.rs  id.rs  json_schema.rs  mod.rs  name.rs  payload.rs  phone_number.rs  phonenumber.rs  prelude.rs  priority.rs  properties.rs  recipient.rs  schema.rs  template.rs  vars.rs  version.rs
crates/perroute-connectors/: Cargo.toml
crates/perroute-connectors/src/: api.rs  configuration.rs  generic_plugins.rs  lib.rs  plugin.rs  spi.rs  template.rs  types.rs
crates/perroute-connectors/src/connector/: mod.rs  smtp.rs
crates/perroute-connectors/src/plugins/: log.rs  mod.rs  smtp.rs
crates/perroute-connectors/src/types/: delivery.rs  dispatch_type.rs  mod.rs  plugin_id.rs  recipient.rs
crates/perroute-cqrs/: Cargo.toml
crates/perroute-cqrs/src/: actor.rs  command_bus.rs  lib.rs  macros.rs  message_bus.rs  prelude.rs
crates/perroute-cqrs/src/command_bus/: bus.rs  commands.rs  error.rs  events.rs  handlers.rs  mod.rs
crates/perroute-cqrs/src/commands/: mod.rs  plugins.rs
crates/perroute-cqrs/tests/: create_channel_it.rs  delete_channel_it.rs  update_channel_it.rs
crates/perroute-digester/: Cargo.toml
crates/perroute-digester/src/: digestor.rs  lib.rs  main.rs  pooling.rs
crates/perroute-dispatcher/: Cargo.toml
crates/perroute-dispatcher/src/: dispatcher.rs  lib.rs  main.rs  pooling.rs  template.rs
crates/perroute-events/: Cargo.toml
crates/perroute-events-pooling/: Cargo.toml
crates/perroute-events-pooling/src/: lib.rs  main.rs  pooling.rs  publisher.rs  sns.rs
crates/perroute-events/src/: lib.rs  main.rs
crates/perroute-integration/: Cargo.toml
crates/perroute-integration/src/: main.rs
crates/perroute-messaging/: Cargo.toml
crates/perroute-messaging/src/: connection.rs  consumer.rs  events.rs  lib.rs  producer.rs
crates/perroute-messaging/tests/: rab.rs
crates/perroute-scheduler/: Cargo.toml
crates/perroute-scheduler/src/: event_pooling.rs  lib.rs  main.rs
crates/perroute-storage/: Cargo.toml
crates/perroute-storage/migrations/: 20230531130345_initial_schema.down.sql  20230531130345_initial_schema.up.sql  20230531130345_intial_schema.down.sql  20230531130345_intial_schema.up.sql  20230622215834_create_message_type.down.sql  20230622215834_create_message_type.up.sql  20230624145908_create_message_type_version.down.sql  20230624145908_create_message_type_version.up.sql  20230626120643_rename_version_to_schema.down.sql  20230626120643_rename_version_to_schema.up.sql  20230704143745_add_template.down.sql  20230704143745_add_template.up.sql  20230712212542_add_message.down.sql  20230712212542_add_message.up.sql  20230713170903_add_api_key.up.sql  20230722132714_add_routes.down.sql  20230722132714_add_routes.up.sql  20241028231038_initial_schema.down.sql  20241028231038_initial_schema.up.sql
crates/perroute-storage/src/: connection_manager.rs  database.rs  error.rs  lib.rs  query.rs  utils.rs
crates/perroute-storage/tests/: chanel_it.rs
crates/perroute-template/: Cargo.toml
crates/perroute-template/src/: error.rs  lib.rs  render.rs  repository.rs  template.rs
(+407 files in other folders)
