[workspace]
resolver = "2"
members = [
    "crates/perroute-api",
    "crates/perroute-command-bus",
    "crates/perroute-commons",
    "crates/perroute-connectors",
    "crates/perroute-dispatcher",
    "crates/perroute-events-pooling",
    "crates/perroute-query-bus",
    "crates/perroute-storage",
]

[workspace.dependencies]
uuid = "1"
chrono = "0.4"
serde = "1.0.215"
serde_json = "1.0.133"
sqlx = { version = "0.8" }
tokio = { version = "1.41.1", features = ["full"] }
actix-web = "4"
actix-web-validator = "6"
dotenvy = "0.15"
env_logger = "0.11"
tap = "1"
strum = "0.26"
strum_macros = "0.26"
thiserror = "2"
base58 = "0.2"
async-trait = "0.1"
secrecy = "0.10"
validator = "0.18"
url = "2.5.4"
derive-getters = "0.5"
derive_setters = "0.1"
bon = "3.2.0"
log = "0.4"
derive_more = "1"
handlebars = "6"
futures = "0.3"
aws-config = "1"
aws-sdk-sqs = "1"
aws-sdk-s3 = "1.64.0"
aws-sdk-sns = "1"
config = "0.14"


# [workspace.lints.rust]
# # https://doc.rust-lang.org/rustc/lints/listing/allowed-by-default.html#allowed-by-default-lints
# unsafe_code = "allow"
# unsafe_op_in_unsafe_fn = "allow"
# missing-abi = "allow"
# missing_docs = "allow"
# unused-variables = "allow"


# [workspace.lints.clippy]
# # https://rust-lang.github.io/rust-clippy/master/
# # pedantic
# pedantic = { level = "allow", priority = -1 }
# must_use_candidate = "allow"
# missing_errors_doc = "allow"
# missing_panics_doc = "allow"
# unwrap_used = "deny"


# # restriction
# undocumented_unsafe_blocks = "allow"
# multiple_unsafe_ops_per_block = "allow"
# allow_attributes = "allow"
