[workspace]
resolver = "2"
members = [
    "crates/perroute-api",
    "crates/perroute-command-bus",
    "crates/perroute-commons",
    "crates/perroute-connectors",
    "crates/perroute-dispatcher",
    "crates/perroute-events-pooling",
    "crates/perroute-query-bus",
    "crates/perroute-storage",
    "crates/perroute-template",
]

[workspace.dependencies]
uuid = "1.16.0"
chrono = "0.4.40"
serde = "1.0.219"
serde_json = "1.0.140"
sqlx = { version = "0.8.3" }
tokio = { version = "1.44.1", features = ["full"] }
actix-web = "4.10.2"
actix-web-validator = "6"
dotenvy = "0.15"
env_logger = "0.11.7"
tap = "1"
strum = "0.27.1"
strum_macros = "0.27.1"
thiserror = "2.0.12"
base58 = "0.2"
async-trait = "0.1.88"
secrecy = "0.10"
validator = "0.18"
url = "2.5.4"
derive-getters = "0.5"
derive_setters = "0.1"
bon = "3.5.1"
log = "0.4.27"
derive_more = "2.0.1"
handlebars = "6.3.2"
futures = "0.3"
aws-config = "1.6.0"
aws-sdk-sqs = "1.62.0"
aws-sdk-s3 = "1.79.0"
aws-sdk-sns = "1.63.0"
config = "0.15.11"
