[package]
name = "omni-backoffice-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
omni-cqrs = {path = "../../crates/omni-cqrs"}
omni-storage = {path = "../../crates/omni-storage"}
omni-connectors = {path = "../../crates/omni-connectors"}
anyhow = "1.0.71"
argon2 = { version = "0.5", features = ["std"] }
async-trait = "0.1"
axum = { version = "0.6", features = ["macros"] }
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-rustls", "time", "uuid"] }
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"
tap = "1"
thiserror = "1"
time = "0.3"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "signal"] }
uuid = { version = "1", features = ["fast-rng", "v4", "v3", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "registry"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
serde-aux = "4"
config = "0.13"
secrecy = { version = "0.8.0", features = ["serde"] }
