[package]
name = "omni-commons"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
config = "0.13.3"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde-aux = "4.2.0"
strum = { version = "0.24.1", features = ["derive"] }
strum_macros = "0.24.3"
tap = "1.0.1"
tracing = "0.1.37"
