[package]
name = "omni-commons"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
config = "0.13"
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde-aux = "4"
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"
tap = "1"
tracing = "0.1"
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "registry"] }
thiserror = "1"
argon2 = { version = "0.5", features = ["std"] }
axum = "0.6"


[dev-dependencies]
temp-env = "0.3"
rstest = "0.17"
