[package]
name = "omni-connectors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tap = "1"
thiserror = "1"
serde-aux = "4"
