[package]
name = "omni-storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
omni-commons = {path = "../../crates/omni-commons"}
sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-rustls", "time", "uuid"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tap = "1"
thiserror = "1"
time = "0.3"
uuid = { version = "1", features = ["fast-rng", "v4", "v3", "serde"] }
tracing = "0.1"
secrecy = "0.8"
anyhow = "1"


