[package]
name = "perroute-api"
version = "0.1.0"
edition = "2021"

[dependencies]
perroute-commons = { path = "../perroute-commons" }
perroute-storage = { path = "../perroute-storage" }
perroute-command-bus = { path = "../perroute-command-bus" }

tokio = { workspace = true, features = ["full"] }
actix-web = { workspace = true }
dotenvy = { workspace = true }
env_logger = { version = "0.11" }
