[package]
name = "perroute-api"
version = "0.1.0"
edition = "2021"

[dependencies]
perroute-commons = { path = "../perroute-commons" }
perroute-storage = { path = "../perroute-storage" }
perroute-command-bus = { path = "../perroute-command-bus" }
perroute-query-bus = { path = "../perroute-query-bus" }
perroute-connectors = { path = "../perroute-connectors" }

tokio = { workspace = true, features = ["full"] }
actix-web = { workspace = true }
dotenvy = { workspace = true }
env_logger = { version = "0.11" }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
validator = { workspace = true, features = ["derive"] }
actix-web-validator = { workspace = true }
url = { workspace = true, features = ["serde"] }
bon = { workspace = true }
strum = { workspace = true }
