[package]
name = "perroute-backoffice-actix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

perroute-cqrs = {path = "../../crates/perroute-cqrs"}
perroute-storage = {path = "../../crates/perroute-storage"}
perroute-connectors = {path = "../../crates/perroute-connectors"}
perroute-commons = {path = "../../crates/perroute-commons"}


actix-web = "4"
tokio = {version = "1", features = ["macros", "rt-multi-thread"]}
dotenv = "0.15"
anyhow="1"
tap="1"
tracing = "0.1"
uuid = { version = "1", features = ["fast-rng", "v4", "serde"] }
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
derive-getters = "0.3"
tracing-actix-web = { version="0.7" }
url = {version = "2", features = ["serde"]}
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"

