[package]
name = "perroute-backoffice-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
perroute-cqrs = {path = "../../crates/perroute-cqrs"}
perroute-storage = {path = "../../crates/perroute-storage"}
perroute-connectors = {path = "../../crates/perroute-connectors"}
perroute-commons = {path = "../../crates/perroute-commons"}
anyhow = "1.0.71"
async-trait = "0.1"
axum = { version = "0.6", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-rustls", "time", "uuid"] }
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"
tap = "1"
thiserror = "1"
time = "0.3"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "signal"] }
uuid = { version = "1", features = ["fast-rng", "v4", "v3", "serde"] }
tracing = "0.1"
serde-aux = "4"
secrecy = { version = "0.8.0", features = ["serde"] }
dotenv = "0.15.0"