[package]
name = "perroute-backoffice-api"
version = "0.1.0"
edition = "2021"


[dependencies]
perroute-commandbus = { path = "../../crates/perroute-commandbus" }
perroute-cqrs = { path = "../../crates/perroute-cqrs" }
perroute-storage = { path = "../../crates/perroute-storage" }
perroute-commons = { path = "../../crates/perroute-commons" }
perroute-connectors = { path = "../../crates/perroute-connectors" }
perroute-messaging = { path = "../../crates/perroute-messaging" }


actix-web = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
dotenv = { workspace = true }
anyhow = { workspace = true }
tap = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["fast-rng", "v4", "serde"] }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
derive-getters = { workspace = true }
tracing-actix-web = { workspace = true }
url = { workspace = true, features = ["serde"] }
strum = { workspace = true, features = ["derive"] }
strum_macros = { workspace = true }
sqlx = { workspace = true, features = ["postgres", "runtime-tokio-rustls"] }
futures = { workspace = true }
http = { workspace = true }
validator = { workspace = true, features = ["derive"] }
actix-web-validator = { workspace = true }
serde_with = { workspace = true, features = ["json"] }
chrono = { workspace = true }
async-trait = { workspace = true }
derive_builder = { workspace = true }
serde_qs = { workspace = true }

[dev-dependencies]
reqwest = { version = "0.11.18", features = [
    "json",
    "native-tls",
    "gzip",
    "multipart",
] }
tracing-test = { workspace = true }
