[package]
name = "perroute-command-bus"
version = "0.1.0"
edition = "2021"

[dependencies]
perroute-storage = { path = "../perroute-storage" }
perroute-commons = { path = "../perroute-commons" }
perroute-connectors = { path = "../perroute-connectors" }

serde = { workspace = true }
thiserror = { workspace = true }
derive-getters = { workspace = true }
derive_setters = { workspace = true }
bon = { workspace = true }
tap = { workspace = true }
log = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true, features = ["derive"] }
strum_macros = { workspace = true }
