[package]
name = "perroute-commons"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
config = { workspace = true }
strum_macros = { workspace = true }
thiserror = { workspace = true }
tap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = [
    "env-filter",
    "json",
    "registry",
] }
tracing-bunyan-formatter = { workspace = true }
tracing-log = { workspace = true }
argon2 = { workspace = true, features = ["std"] }
sqlx = { workspace = true, features = [
    "postgres",
    "runtime-tokio-rustls",
    "chrono",
    "uuid",
] }
secrecy = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
strum = { workspace = true, features = ["derive"] }
regex = { workspace = true }
lazy_static = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["fast-rng", "v4", "serde"] }
derive-getters = { workspace = true }
jsonschema = { workspace = true }
actix-web = { workspace = true }
handlebars = { workspace = true }

[dev-dependencies]
temp-env = "0.3"
rstest = "0.18"
