[package]
name = "perroute-commons"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { workspace = true, features = ["v7", "serde"] }
chrono = { workspace = true, features = ["serde"] }
serde_json = { workspace = true }
strum = { workspace = true, features = ["derive"] }
strum_macros = { workspace = true }
tap = { workspace = true }
log = "0.4"
thiserror = { workspace = true }
config = "0.14"
serde = { workspace = true }
sqlx = { workspace = true, features = [
    "runtime-async-std",
    "macros",
    "postgres",
    "chrono",
    "uuid",
] }
base58 = { workspace = true }
secrecy = { workspace = true, features = ["serde"] }
handlebars = { workspace = true }
derive_more = { workspace = true, features = ["full"] }
bon = { workspace = true }
derive-getters = { workspace = true }
paste = "1"
