[package]
name = "perroute-connectors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
perroute-commons = { path = "../../crates/perroute-commons" }
derive_builder = { workspace = true }
serde = { workspace = true, features = ["derive"] }
sqlx = { workspace = true }
lettre = { workspace = true, features = ["serde", "serde_json"] }
serde_json = { workspace = true }
derive-getters = { workspace = true }
thiserror = { workspace = true }
erased-serde = { workspace = true }
tap = { workspace = true }
tracing = { workspace = true }
