[package]
name = "perroute-connectors"
version = "0.1.0"
edition = "2021"

[dependencies]
perroute-commons = { path = "../perroute-commons" }
strum = { workspace = true }
strum_macros = { workspace = true }
serde = { workspace = true, features = ["derive"] }
sqlx = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
bon = { workspace = true }
derive_more = { workspace = true }
