[package]
name = "perroute-cqrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
perroute-storage = {path = "../../crates/perroute-storage"}
perroute-connectors = {path = "../../crates/perroute-connectors"}
perroute-commons = {path = "../../crates/perroute-commons"}
anyhow = "1.0.71"
async-trait = "0.1"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-rustls", "time", "uuid"] }
tap = "1"
thiserror = "1"
time = { version = "0.3", features = ["serde"] }
uuid = { version = "1", features = ["fast-rng", "v4", "v3", "serde"] }
tracing = "0.1"
derive-new = "0.5.9"

[dev-dependencies]
assert_matches="1"


