[package]
name = "perroute-cqrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
perroute-storage = { path = "../../crates/perroute-storage" }
perroute-connectors = { path = "../../crates/perroute-connectors" }
perroute-commons = { path = "../../crates/perroute-commons" }
perroute-messaging = { path = "../../crates/perroute-messaging" }
anyhow = "1"
async-trait = "0.1"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.6", features = [
    "postgres",
    "runtime-tokio-rustls",
    "chrono",
    "uuid",
] }
tap = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["fast-rng", "v4", "v3", "serde"] }
tracing = "0.1"
derive-new = "0.5"
strum = { version = "0.25", features = ["derive"] }
strum_macros = "0.25"
tokio = { version = "1", features = ["full"] }
derive_builder = "0.12.0"
derive-getters = "0.3"


[dev-dependencies]
assert_matches = "1"
