[package]
name = "perroute-cqrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
perroute-storage = { path = "../../crates/perroute-storage" }
perroute-commons = { path = "../../crates/perroute-commons" }
perroute-messaging = { path = "../../crates/perroute-messaging" }
perroute-connectors = { path = "../../crates/perroute-connectors" }
anyhow = { workspace = true }
async-trait = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sqlx = { workspace = true, features = [
    "postgres",
    "runtime-tokio-rustls",
    "chrono",
    "uuid",
] }
tap = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["fast-rng", "v4", "v3", "serde"] }
tracing = { workspace = true }
derive-new = { workspace = true }
strum = { workspace = true, features = ["derive"] }
strum_macros = { workspace = true }
tokio = { workspace = true, features = ["full"] }
derive_builder = { workspace = true }
derive-getters = { workspace = true }
futures = { workspace = true }


[dev-dependencies]
assert_matches = "1"
