[package]
name = "perroute-digester"
version = "0.1.0"
edition = "2021"

[dependencies]
perroute-commons = { path = "../perroute-commons" }
perroute-storage = { path = "../perroute-storage" }
tokio = { workspace = true, features = ["full"] }
aws-config = { workspace = true }
aws-sdk-sqs = { workspace = true }
aws-sdk-s3 = { workspace = true }
dotenvy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
