[package]
name = "perroute-events"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
perroute-storage = { path = "../../crates/perroute-storage" }
perroute-commons = { path = "../../crates/perroute-commons" }
serde = { version = "1", features = ["derive"] }
strum = { version = "0.25", features = ["derive"] }
strum_macros = "0.25"
derive-getters = "0.3"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.6", features = [
    "postgres",
    "runtime-tokio-rustls",
    "chrono",
    "uuid",
] }
tokio-cron-scheduler = "0.9"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
anyhow = "1"
aws-config = "0.55"
aws-sdk-config = "0.28.0"
aws-sdk-sns = "0.28"
aws-credential-types = "0.55.3"
dotenv = "0.15"
serde_json = "1"
