[package]
name = "perroute-events"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
perroute-storage = { path = "../../crates/perroute-storage" }
perroute-messaging = { path = "../../crates/perroute-messaging" }
perroute-commons = { path = "../../crates/perroute-commons" }

serde = { workspace = true, features = ["derive"] }
sqlx = { workspace = true, features = [
    "postgres",
    "runtime-tokio-rustls",
    "chrono",
    "uuid",
] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
anyhow = { workspace = true }
dotenv = { workspace = true }
lapin = { workspace = true }
tap = { workspace = true }
futures = { workspace = true }
tokio-util = { workspace = true }
executor-trait = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
async-recursion = { workspace = true }
