[package]
name = "perroute-messaging"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
perroute-commons = { path = "../../crates/perroute-commons" }
chrono = { version = "0.4", features = ["serde"] }
derive-getters = "0.3"
serde = { version = "1", features = ["derive"] }
strum = { version = "0.25", features = ["strum_macros", "derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
strum_macros = "0.25"
sqlx = { version = "0.6" }
lapin = "2"
thiserror = "1"
async-trait = "0.1"
serde_json = "1.0.104"
tap = "1.0.1"
anyhow = "1"
futures = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
parking_lot = "0.12"
rand = "0.8.5"
tracing = "0.1"
