[package]
name = "perroute-messaging"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
perroute-commons = { path = "../../crates/perroute-commons" }
chrono = { workspace = true, features = ["serde"] }
derive-getters = { workspace = true }
serde = { workspace = true, features = ["derive"] }
strum = { workspace = true, features = ["strum_macros", "derive"] }
uuid = { workspace = true, features = ["v4", "serde"] }
strum_macros = { workspace = true }
sqlx = { workspace = true }
lapin = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
serde_json = { workspace = true }
tap = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
rand = { workspace = true }
tracing = { workspace = true }
