[package]
name = "perroute-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { workspace = true, features = ["v7", "serde"] }
chrono = { workspace = true, features = ["serde"] }
serde_json = { workspace = true }
perroute-commons = { path = "../perroute-commons" }
sqlx = { workspace = true, features = ["postgres", "macros"] }
tokio = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
secrecy = { workspace = true }
derive-getters = { workspace = true }
derive_setters = { workspace = true }
bon = { workspace = true }
