[package]
name = "perroute-template"
version = "0.1.0"
edition = "2021"

[dependencies]
perroute-commons = { path = "../perroute-commons" }
serde = "1.0.217"
serde_json = "1.0.135"
thiserror = "2.0.11"
async-trait = "0.1.85"
aws-config = { version = "1.5.14", features = [
    "behavior-version-latest",
], optional = true }
aws-sdk-s3 = { version = "1.69.0", optional = true }
handlebars = { version = "6.3.0", optional = true }

mockall = { version = "0.13.1", optional = true }

[features]
repo_aws_s3 = ["aws-sdk-s3", "aws-config"]
repo_memory = []
handlebars = ["dep:handlebars"]
test-mocks = ["mockall"]
